# software-engineering-lab4

./: .env  CMakeLists.txt  CMakePresets.json  Dockerfile  Makefile  README.md  aggregation.js  data.js  data.sql  docker-compose.yml  init-mongo.js  optimization.md  queries.js  queries.sql  schema.sql  schema_design.md  validation.js
.devcontainer/: Dockerfile  devcontainer.json
api/: openapi.yaml  openapi_full.yaml
configs/: config_vars.testing.yaml  config_vars.yaml  static_config.yaml
docs/definitions/: auth.yaml  car.yaml  common.yaml  errors.yaml  rental.yaml  user.yaml
postgres/: init.sql
postman/: -api-v1.postman_collection.json
src/: main.cpp
src/controllers/create_car/: create_car.cpp  create_car.hpp
src/controllers/create_rental/: create_rental.cpp  create_rental.hpp
src/controllers/create_user/: create_user.cpp  create_user.hpp
src/controllers/get_available_cars/: get_available_cars.cpp  get_available_cars.hpp
src/controllers/get_cars_by_class/: get_cars_by_class.cpp  get_cars_by_class.hpp
src/controllers/get_user_by_login/: get_user_by_login.cpp  get_user_by_login.hpp
src/controllers/login/: login.cpp  login.hpp
src/domain/: car.hpp  exceptions.hpp  rental.hpp  user.hpp
src/infrastructure/jwt/: jwt.cpp  jwt.hpp  jwt_auth_factory.cpp  jwt_auth_factory.hpp  jwt_checker.cpp  jwt_checker.hpp  jwt_generator.cpp  jwt_generator.hpp
src/infrastructure/mongo_storage/: mongo_instance.cpp  mongo_instance.hpp  mongo_storage.cpp  mongo_storage.hpp  mongo_storage_component.cpp  mongo_storage_component.hpp
src/infrastructure/postgres_storage/: postgres_storage.cpp  postgres_storage.hpp
src/lib/json_builders/: json_builders.cpp  json_builders.hpp
src/lib/password_hasher/: password_hasher.cpp  password_hasher.hpp
src/services/car_service/: car_service.cpp  car_service.hpp
src/services/rental_service/: rental_service.cpp  rental_service.hpp
src/services/user_service/: user_service.cpp  user_service.hpp
tests/: test_basic.py
